--- a/index.html
+++ b/index.html
@@ -5,362 +5,21 @@
 <meta name="viewport" content="width=device-width,initial-scale=1" />
 <title>Sprint Dynasty MVP</title>
 <style>
-  body { margin:0; background:#222; font-family: system-ui, -apple-system, "Hiragino Kaku Gothic ProN", "Noto Sans JP", sans-serif; }
+  body { margin:0; background:#1b1f2a; font-family: system-ui, -apple-system, "Hiragino Kaku Gothic ProN", "Noto Sans JP", sans-serif; }
   .wrap { display:flex; justify-content:center; padding:18px; }
-  canvas { background:#2e8b57; border-radius:12px; box-shadow: 0 8px 24px rgba(0,0,0,.35); }
+  canvas { background:#0f2a4d; border-radius:16px; box-shadow: 0 10px 30px rgba(0,0,0,.45); }
   .hud {
-    max-width:1000px; margin:0 auto; color:#eee; padding:0 18px 18px;
+    max-width:1000px; margin:0 auto; color:#eaf2ff; padding:0 18px 18px;
     display:flex; gap:10px; flex-wrap:wrap; align-items:center;
   }
   .card {
-    background:#111; border:1px solid #333; border-radius:12px;
+    background:rgba(0,0,0,.35); border:1px solid rgba(255,255,255,.10); border-radius:14px;
     padding:10px 12px; display:flex; gap:10px; align-items:center;
+    backdrop-filter: blur(6px);
   }
   button {
-    appearance:none; border:0; border-radius:12px; padding:10px 14px;
-    background:#ffd400; color:#111; font-weight:800; cursor:pointer;
+    appearance:none; border:0; border-radius:14px; padding:10px 14px;
+    background:#ffd400; color:#111; font-weight:900; cursor:pointer;
   }
   button:disabled { opacity:.5; cursor:not-allowed; }
-  .small { font-size:12px; opacity:.85; }
-</style>
-</head>
-
-<body>
-  <div class="wrap">
-    <canvas id="cv" width="1000" height="520"></canvas>
-  </div>
-
-  <div class="hud">
-    <div class="card">
-      <div><b>100m（MVP）</b><div class="small">タップでスタート。もう一回でリセット。</div></div>
-    </div>
-    <button id="btnStart">スタート</button>
-    <button id="btnReset">リセット</button>
-    <div class="card" id="status">待機中</div>
-  </div>
-
-<script>
-/** ========= MVP: 8-lane 100m race ========= **/
-const canvas = document.getElementById("cv");
-const ctx = canvas.getContext("2d");
-const W = canvas.width, H = canvas.height;
-
-const btnStart = document.getElementById("btnStart");
-const btnReset = document.getElementById("btnReset");
-const statusEl = document.getElementById("status");
-
-const TRACK = {
-  left: 70,
-  right: 950,
-  top: 80,
-  laneH: 48,
-  lanes: 8,
-  finishX: 920
-};
-
-const COLORS = ["#ffd400","#66d9ff","#ff6b6b","#a7ff83","#c792ea","#f78c6c","#89ddff","#f6f7ff"];
-
-// 主要人物：吹き出し（写真の代わりに絵文字）
-// 後で portrait に画像URLを入れれば「写真っぽく」もできる
-const KEY_IDS = new Set(["P001","R_SAME","BOSS"]);
-
-let state = "idle"; // idle | running | finished
-let t0 = 0;
-
-function rand(min, max) { return min + Math.random()*(max-min); }
-function clamp(v, lo, hi){ return Math.max(lo, Math.min(hi, v)); }
-
-/** 能力→スピードへの超簡易式（後であなたの確定式に差し替える前提）
- * SPD/ACC/POW/TEC/STA/MEN の雰囲気だけ入れてる
- */
-function makeStats(base){
-  const SPD = clamp(Math.round(base + rand(-4,4)), 20, 99);
-  const ACC = clamp(Math.round(base + rand(-4,4)), 20, 99);
-  const POW = clamp(Math.round(base + rand(-4,4)), 20, 99);
-  const TEC = clamp(Math.round(base + rand(-4,4)), 20, 99);
-  const STA = clamp(Math.round(base + rand(-4,4)), 20, 99);
-  const MEN = clamp(Math.round(base + rand(-4,4)), 20, 99);
-  return {SPD,ACC,POW,TEC,STA,MEN};
-}
-
-// MVPの名前（後でJSONから読む）
-// 今は「それっぽさ」を感じる最低限にしてある
-function buildRunners(){
-  const runners = [];
-
-  // 主人公（黄色）
-  runners.push({
-    id:"P001",
-    name:"（あなた）",
-    school:"春風高校",
-    key:true,
-    portrait:"🙂",
-    stats: makeStats(55)
-  });
-
-  // 同年代ライバル（強豪校固定）
-  runners.push({
-    id:"R_SAME",
-    name:"風間 迅",
-    school:"槍ヶ岳高校",
-    key:true,
-    portrait:"😼",
-    stats: makeStats(60)
-  });
-
-  // 大会ボス（ここでは仮で入れる）
-  runners.push({
-    id:"BOSS",
-    name:"九条 蒼真",
-    school:"富士高校",
-    key:true,
-    portrait:"😤",
-    stats: makeStats(62)
-  });
-
-  // 残りモブ5人
-  const mobs = [
-    ["田中 陸","北岳高校"],
-    ["佐藤 悠真","奥穂高高校"],
-    ["鈴木 湊","大雪山高校"],
-    ["高橋 蓮","白山高校"],
-    ["伊藤 隼人","御嶽高校"],
-  ];
-  for (const [name,school] of mobs){
-    runners.push({
-      id:"M_"+name,
-      name, school,
-      key:false,
-      portrait:"", // 主要じゃないので無し
-      stats: makeStats(54)
-    });
-  }
-
-  // レーン割り当て（ランダム）
-  for (let i=runners.length-1;i>0;i--){
-    const j=Math.floor(Math.random()*(i+1));
-    [runners[i], runners[j]] = [runners[j], runners[i]];
-  }
-
-  // ランナー状態を付与
-  runners.forEach((r,idx)=>{
-    r.lane = idx;
-    r.y = TRACK.top + idx*TRACK.laneH;
-    r.x = TRACK.left;
-    r.v = 0;
-    r.done = false;
-    r.time = null;
-  });
-
-  return runners;
-}
-
-let runners = buildRunners();
-
-function calcTargetSpeed(stats){
-  // ざっくり：基礎 + SPD + POW少し、MEN/TECでブレ耐性
-  const base = 2.1;
-  const spd = stats.SPD * 0.025;
-  const pow = stats.POW * 0.010;
-  return base + spd + pow; // px/frame（後で式差し替え）
-}
-
-function updateRunner(r, dt){
-  if (r.done) return;
-
-  const {SPD, ACC, TEC, STA, MEN} = r.stats;
-  const target = calcTargetSpeed(r.stats);
-
-  // 加速：ACCが高いほど早くtargetに近づく
-  const accel = (0.6 + ACC*0.010) * dt;
-
-  // ブレ：MEN/TECが低いほど揺れる（運要素）
-  const jitterAmp = clamp(0.35 - (MEN*0.002 + TEC*0.001), 0.05, 0.35);
-  const jitter = (Math.random()*2-1) * jitterAmp;
-
-  // 後半失速（STAが低いと少し失速）
-  const progress = (r.x - TRACK.left) / (TRACK.finishX - TRACK.left);
-  const fade = (progress > 0.65) ? ( (0.65-progress) * ( (80-STA)/140 ) ) : 0; // マイナス寄り
-  const fatigueFactor = clamp(1 + fade, 0.88, 1.02);
-
-  // 速度更新
-  r.v += (target - r.v) * accel;
-  const step = (r.v + jitter) * fatigueFactor * 60 * dt; // dt秒→フレーム換算
-
-  r.x += Math.max(0.5, step);
-
-  if (r.x >= TRACK.finishX){
-    r.x = TRACK.finishX;
-    r.done = true;
-    r.time = (performance.now() - t0) / 1000;
-  }
-}
-
-function allDone(){
-  return runners.every(r=>r.done);
-}
-
-function drawTrack(){
-  // field
-  ctx.fillStyle = "#2e8b57";
-  ctx.fillRect(0,0,W,H);
-
-  // lanes
-  ctx.strokeStyle = "rgba(255,255,255,.45)";
-  ctx.lineWidth = 2;
-  for (let i=0;i<=TRACK.lanes;i++){
-    const y = TRACK.top + i*TRACK.laneH;
-    ctx.beginPath();
-    ctx.moveTo(TRACK.left, y);
-    ctx.lineTo(TRACK.right, y);
-    ctx.stroke();
-  }
-
-  // start line
-  ctx.strokeStyle = "rgba(255,255,255,.9)";
-  ctx.lineWidth = 4;
-  ctx.beginPath();
-  ctx.moveTo(TRACK.left, TRACK.top);
-  ctx.lineTo(TRACK.left, TRACK.top + TRACK.lanes*TRACK.laneH);
-  ctx.stroke();
-
-  // finish line
-  ctx.strokeStyle = "rgba(255,255,255,.9)";
-  ctx.lineWidth = 4;
-  ctx.beginPath();
-  ctx.moveTo(TRACK.finishX, TRACK.top);
-  ctx.lineTo(TRACK.finishX, TRACK.top + TRACK.lanes*TRACK.laneH);
-  ctx.stroke();
-
-  // distance label
-  ctx.fillStyle = "rgba(255,255,255,.85)";
-  ctx.font = "700 16px system-ui";
-  ctx.fillText("100m", TRACK.left, 40);
-}
-
-function drawRunner(r){
-  const x = r.x;
-  const y = r.y + 6;
-  const w = 18, h = 34;
-
-  // silhouette body
-  ctx.fillStyle = COLORS[r.lane % COLORS.length];
-  ctx.fillRect(x, y, w, h);
-
-  // name label
-  ctx.fillStyle = "rgba(0,0,0,.65)";
-  ctx.fillRect(x-4, y-18, 160, 16);
-  ctx.fillStyle = "#fff";
-  ctx.font = "12px system-ui";
-  ctx.fillText(`${r.name}（${r.school}）`, x, y-6);
-
-  // key bubble (portrait)
-  if (r.key){
-    const bx = x + 30;
-    const by = y - 44;
-    // bubble
-    ctx.fillStyle = "rgba(255,255,255,.92)";
-    roundRect(bx, by, 44, 30, 8, true, false);
-    // tail
-    ctx.beginPath();
-    ctx.moveTo(bx+10, by+30);
-    ctx.lineTo(bx+18, by+30);
-    ctx.lineTo(bx+12, by+38);
-    ctx.closePath();
-    ctx.fillStyle = "rgba(255,255,255,.92)";
-    ctx.fill();
-
-    // portrait (emoji for now)
-    ctx.fillStyle = "#111";
-    ctx.font = "20px system-ui";
-    ctx.fillText(r.portrait || "🙂", bx+10, by+22);
-  }
-}
-
-function roundRect(x, y, w, h, r, fill, stroke) {
-  if (w < 2*r) r = w/2;
-  if (h < 2*r) r = h/2;
-  ctx.beginPath();
-  ctx.moveTo(x+r, y);
-  ctx.arcTo(x+w, y,   x+w, y+h, r);
-  ctx.arcTo(x+w, y+h, x,   y+h, r);
-  ctx.arcTo(x,   y+h, x,   y,   r);
-  ctx.arcTo(x,   y,   x+w, y,   r);
-  ctx.closePath();
-  if (fill) ctx.fill();
-  if (stroke) ctx.stroke();
-}
-
-function draw(){
-  drawTrack();
-  runners.forEach(drawRunner);
-
-  // finish results
-  if (state === "finished"){
-    const sorted = [...runners].sort((a,b)=>a.time - b.time);
-    ctx.fillStyle = "rgba(0,0,0,.75)";
-    roundRect(640, 25, 330, 180, 14, true, false);
-    ctx.fillStyle = "#fff";
-    ctx.font = "800 16px system-ui";
-    ctx.fillText("結果（決勝）", 660, 55);
-
-    ctx.font = "13px system-ui";
-    sorted.slice(0,8).forEach((r,i)=>{
-      const line = `${i+1}位  ${r.name}  ${r.time.toFixed(2)}s`;
-      ctx.fillText(line, 660, 80 + i*18);
-    });
-
-    const win = sorted[0];
-    statusEl.textContent = `優勝：${win.name}（${win.time.toFixed(2)}s）`;
-  }
-}
-
-let last = performance.now();
-function loop(now){
-  const dt = (now - last) / 1000;
-  last = now;
-
-  if (state === "running"){
-    runners.forEach(r => updateRunner(r, dt));
-    if (allDone()){
-      state = "finished";
-      btnStart.disabled = false;
-      btnStart.textContent = "もう一回";
-    }
-  }
-
-  draw();
-  requestAnimationFrame(loop);
-}
-requestAnimationFrame(loop);
-
-function startRace(){
-  if (state === "idle"){
-    state = "running";
-    t0 = performance.now();
-    btnStart.disabled = true;
-    statusEl.textContent = "レース中…";
-  } else if (state === "finished"){
-    resetRace();
-    startRace();
-  }
-}
-
-function resetRace(){
-  runners = buildRunners();
-  state = "idle";
-  btnStart.disabled = false;
-  btnStart.textContent = "スタート";
-  statusEl.textContent = "待機中";
-}
-
-btnStart.addEventListener("click", startRace);
-btnReset.addEventListener("click", resetRace);
-
-// 画面タップでもスタート
-canvas.addEventListener("click", ()=>{
-  if (state === "idle") startRace();
-});
-</script>
-</body>
-</html>
+  .sma
